fix: font weight 및 letter-spacing 수정

--- a/src/shared/styles/fonts.scss
+++ b/src/shared/styles/fonts.scss
@@ -2,7 +2,7 @@
   font-family: 'Pretendard', sans-serif;
   font-weight: $weight;
   font-size: $size * 1rem;
-  letter-spacing: -3%;
+  letter-spacing: -0.03rem;
   line-height: $line-height;
 
   @font-face {
@@ -15,18 +15,32 @@
   }
 }
 
-.h1bold { @include font-style(bold, 1.5, 130%); } // 24px
-.h1semi { @include font-style(semibold, 1.5, 130%); } // 24px
-.h2semi { @include font-style(semibold, 1.25, 130%); } // 20px
-.h3semi { @include font-style(semibold, 1, 140%); } // 16px
-.h4semi { @include font-style(semibold, 0.875, 130%); } // 14px
-.h4md { @include font-style(medium, 0.875, 130%); } // 14px
+/* 24px */
+.h1bold { @include font-style(700, 1.5, 130%); }
+.h1semi { @include font-style(600, 1.5, 130%); }
 
-.b1md { @include font-style(medium, 0.75, 130%) } // 12px
-.b1semi { @include font-style(semibold, 0.75, 130%); } // 12px
-.b1reg { @include font-style(regular, 0.75, 140%); } // 12px
-.b2md { @include font-style(medium, 0.6875, 130%); } // 11px
-.b2semi { @include font-style(semibold, 0.6875, 130%); } // 11px
-.b2reg { @include font-style(regular, 0.6875, 130%); } // 11px
-.b3md { @include font-style(medium, 0.5625, 130%); } // 9px
-.b4md { @include font-style(medium, 0.5, 130%); } // 8px
+/* 20px */
+.h2semi { @include font-style(600, 1.25, 130%); }
+
+/* 16px */
+.h3semi { @include font-style(600, 1, 140%); }
+
+/* 14px */
+.h4semi { @include font-style(600, 0.875, 130%); }
+.h4md { @include font-style(500, 0.875, 130%); }
+
+/* 12px */
+.b1semi { @include font-style(600, 0.75, 130%); }
+.b1md { @include font-style(500, 0.75, 130%) }
+.b1reg { @include font-style(400, 0.75, 140%); }
+
+/* 11px */
+.b2md { @include font-style(500, 0.6875, 130%); }
+.b2semi { @include font-style(600, 0.6875, 130%); }
+.b2reg { @include font-style(400, 0.6875, 130%); }
+
+/* 9px */
+.b3md { @include font-style(500, 0.5625, 130%); }
+
+/* 8px */
+.b4md { @include font-style(500, 0.5, 130%); }
